# SRLE

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: srle.h
src/: decoder.cpp  encoder.cpp  tests.cpp
